@@ -70,3 +70,29 @@ def test_meshgrid(arr_lengths):
     for native, pop in zip(native_out, poptorch_out):
         assert native.size() == pop.size()
         torch.testing.assert_allclose(native, pop)
+
+
+@pytest.mark.parametrize("arr_lengths",
+                         ([3], [3, 3], [2, 4], [3, 2, 4], [5, 2, 3, 4]))
+def test_cartesian_prod(arr_lengths):
+    torch.manual_seed(42)
+
+    class Model(torch.nn.Module):
+        def forward(self, xs):
+            # Add one to force compute the first test case
+            return torch.cartesian_prod(*xs) + 1
+
+    model = Model()
+    poptorch_model = poptorch.inferenceModel(model)
+
+    # TODO(T26908): Passing in list causes compiler assert
+    xs = tuple([torch.randn(arr_length) for arr_length in arr_lengths])
+
+    # Run on CPU
+    native_out = model(xs)
+
+    # Run on IPU
+    poptorch_out = poptorch_model(xs)
+
+    assert native_out.size() == poptorch_out.size()
+    torch.testing.assert_allclose(native_out, poptorch_out)
